# api-pipeline

./: .env.example  .gitignore  Dockerfile  README.md  prompts.txt  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.cloud/ci/: cloudbuild-dev.yaml  cloudbuild-prod.yaml  cloudbuild.yaml
config/: README.md
config/dev/: config.yaml
config/dev/sources/: github_api.yaml  github_commits.yaml  openweathermap_chain.yaml  weather_api.yaml
config/local/: config.yaml
config/local/sources/: github_api.yaml  github_commits.yaml  weather_api.yaml
config/prod/: config.yaml
config/prod/sources/: github_api.yaml  weather_api.yaml
docs/: system_design.md
docs/core/: auth.md  base.md  chain_executor.md  factory.md  models.md  pipeline.md  pipeline_manager.md  secrets.md
docs/extractors/: implementation_example.md
docs/features/: chaining.md
docs/todo/: chain_list_processing.md  extractor_chain_pattern.md
examples/: openweathermap_chain_example.py  openweathermap_example.py  openweathermap_framework_chain.py
src/api_pipeline/: __init__.py  main.py
src/api_pipeline/core/: __init__.py  auth.py  base.py  config.py  factory.py  metrics.py  models.py  output.py  pagination.py  parallel.py  pipeline.py  pipeline_manager.py  retry.py  secrets.py  types.py  utils.py  watermark.py  windowing.py
src/api_pipeline/core/chain/: __init__.py  chain.py  executor.py  models.py  state.py
src/api_pipeline/extractors/: __init__.py  github.py  github_commits.py  github_repos.py  github_users.py  weather.py
src/api_pipeline/extractors/openweathermap/: __init__.py  air_quality.py  base.py  current.py  forecast.py
src/api_pipeline/outputs/: __init__.py  bigquery.py  gcs.py  local_json.py
tests/: TEST_CASES.md  conftest.py  test_framework_flow.py  test_mock_chain.py
tests/chain/: test_chain_executor.py
tests/core/: test_base.py  test_config.py  test_config_system.py  test_factory.py  test_models.py  test_pagination.py  test_pagination_logic.py  test_pipeline_manager.py  test_resource_management.py  test_windowing.py
tests/extractors/: test_base.py  test_config.yaml  test_exceptions.py  test_implementation_guide.py
tests/integration/: test_github_chain.py  test_github_commits.py  test_github_repos.py  test_github_users.py  test_local_output.py  test_openweathermap.py  test_openweathermap_chain.py  test_openweathermap_e2e.py  test_openweathermap_real.py
tests/mocks/: mock_config.yaml  mock_weather_server.py
tests/outputs/: __init__.py  test_local_json.py
